# finddata

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  MANIFEST.in  README  README.md  environment.yml  finddata  finddata.bashcomplete  finddata.spec  make_rpm  publish_plot.py  pyproject.patch  pyproject.toml  rpmbuild.sh  setup.cfg  setup.py  sync-version.sh  versioneer.py
.github/: dependabot.yml
.github/workflows/: package.yml  security.yml  test_and_deploy.yml
conda.recipe/: meta.yaml
finddata/: __init__.py  _version.py  publish_plot.py
scripts/: finddata  finddata.py
src/finddata/: __init__.py  _version.py  cli.py  publish_plot.py  version.py
