[project]
name = "finddata"
authors = [
  { name = "Pete Peterson", email = "petersonpf@ornl.gov" },
  { name = "Chen Zhang", email = "zhangc@ornl.gov" },
]
description = "A program to find data files using ONCat"
dynamic = ["version"]
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["neutrons", "finddata", "ONCat"]
readme = "README.md"
dependencies = [ "plotly<7.0", "toml>=0.10,<0.11", "urllib3>=2.5,<3"]

[project.scripts]
finddata = "finddata.cli:main"

[project.urls]
homepage = "https://github.com/neutrons/finddata/"
repository = "https://github.com/neutrons/finddata/"
documentation = "https://github.com/neutrons/finddata/"
issues = "https://github.com/neutrons/finddata/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "versioningit"]

# ------------------- #
# Hatch configuration #
# ------------------- #
[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.hooks.versioningit-onbuild]
source-file = "src/finddata/_version.py"
build-file = "finddata/_version.py"
replacement = '"{next_version}"'

[tool.hatch.build]
artifacts = ["src/finddata/_version.py"]

# -------------------------- #
# Versioningit configuration #
# -------------------------- #
[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d}"

[tool.versioningit.write]
file = "src/finddata/_version.py"

# -------------------- #
# PyTest configuration #
# -------------------- #
[tool.pytest.ini_options]
addopts = "-v --cov=finddata --cov-report=term-missing"
pythonpath = [".", "src", "scripts", "finddata"]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [
  ".git",
  "tmp*",
  "_tmp*",
  "__pycache__",
  "*dataset*",
  "*data_set*",
]
markers = ["mymarker: example markers goes here"]

# ------------------ #
# Ruff configuration #
# ------------------ #
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["conftest.py"]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "ASYNC",
  "BLE",
  "C90",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "UP032",
  "W",
]
ignore = ["F403", "F405", "N802", "N803", "C901", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["finddata"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ------------------ #
# Pixi configuration #
# ------------------ #
[tool.pixi.workspace]
preview = ["pixi-build"] # Need this to access pixi-build feature
channels = ["conda-forge", "https://prefix.dev/pixi-build-backends", "neutrons",
]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
toml = ">=0.10.2,<0.11"
plotly = "<6.0"

[tool.pixi.pypi-dependencies]
finddata = { path = ".", editable = true }
toml-cli = ">=0.7.0,<0.8"
ty = ">=0.0.1a8,<0.0.1a9"

[tool.pixi.package]
name = "finddata"
version = "0.0.0" # placeholder, can be updated by task sync-version

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }

[tool.pixi.package.host-dependencies]
hatchling = "*"
versioningit = "*"

[tool.pixi.package.run-dependencies]
urllib3 = "*"
plotly = "*"
toml = "*"

[tool.pixi.tasks]
# PyPI
build-sdist = { cmd = "hatch build sdist", description = "Build the source distribution (tar.gz)" }
build-pypi = { cmd = "hatch build", description = "Build the package for PyPI" }
clean-pypi = { cmd = "rm -rf dist", description = "Clean the PyPI build artifacts" }
publish-pypi = { cmd = "twine upload dist/*", description = "Publish the package to PyPI", depends-on = [
  "build-pypi",
] }
# Conda
build-conda-command = { cmd = "pixi build", description = "Build the conda package command" }
build-conda = { description = "Build the conda package", depends-on = [
  "sync-version",
  "build-conda-command",
  "reset-version",
] }
clean-conda = { cmd = "rm finddata-*.conda", description = "Clean the conda build artifacts" }
# MISC
clean-all = { description = "Clean all build artifacts", depends-on = [
  "reset-version",
  "clean-pypi",
  "clean-conda",
] }
sync-version = { cmd = "version=$(python -m versioningit); toml set tool.pixi.package.version \"$version\" --toml-path pyproject.toml" }
reset-version = { cmd = "toml set tool.pixi.package.version \"0.0.0\" --toml-path pyproject.toml", description = "Reset the package version to 0.0.0" }
audit-deps = { cmd = "pip-audit --local -s osv" }

[tool.pixi.feature.package.dependencies]
anaconda-client = ">=1.13.0,<2"
twine = ">=6.1.0,<7"
versioningit = "*"
hatch = "*"

[tool.pixi.feature.developer.dependencies]
pip = "*"
versioningit = "*"
pre-commit = "*"
argcomplete = "*"
pip-audit = ">=2.9.0,<3"

[tool.pixi.environments]
default = { features = ["package", "developer"], solve-group = "default" }
